--- a/NewsSite.BlazorUI/Pages/News/WatchNews.razor
+++ b/NewsSite.BlazorUI/Pages/News/WatchNews.razor
@@ -1,4 +1,5 @@
-﻿<link rel="stylesheet" href="../css/WatchStyles.css">
+﻿@page "/Watch"
+<link rel="stylesheet" href="../css/WatchStyles.css">
 
 <div class="NewsContainer">
     <div class="NewsContainer_TitleContainer">
