--- a/NewsSite.BlazorUI/Shared/MainLayout.razor
+++ b/NewsSite.BlazorUI/Shared/MainLayout.razor
@@ -3,22 +3,14 @@
 <link rel="stylesheet" href="../css/DefaultStyles.css">
 <header>
     <div class="Title_Container">
-        <a href="IndexModel.html" class="Title_Container_Title">The NewsSite</a>
+        <a href="/" class="Title_Container_Title">The NewsSite</a>
     </div>
-    <nav class="NavigationMenu">
-        <div class="NavigationMenu_ButtonContainer">
-            <a href="RegistrationModel.html" class="NavigationMenu_Button"> Регистрация </a>
-        </div>
-        <div class="NavigationMenu_ButtonContainer">
-            <a href="AddNewsModel.html" class="NavigationMenu_Button"> Добавить новость </a>
-        </div>
-    </nav>
+    <NavMenu />
 </header>
 <main role="main" class="main">
     @Body
 </main>
 
 <footer>
-    <span>Site by Ulyanov Ivan.</span>
-    <a href="https://github.com/Ulyanov-programmer">GitHub</a>
+    <AuthorInfo />
 </footer>
